--- a/mediaplayer/mediaplayer/mediaplayer.csproj
+++ b/mediaplayer/mediaplayer/mediaplayer.csproj
@@ -125,8 +125,8 @@
     <Compile Include="Model\MenuItem.cs" />
     <Compile Include="Model\Playlist.cs" />
     <Compile Include="Model\PlaylistManager.cs" />
-    <Compile Include="Model\Sound.cs" />
-    <Compile Include="Model\SoundManager.cs" />
+    <Compile Include="Model\Song.cs" />
+    <Compile Include="Model\SongManager.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
